Add pályázatok subpage and update main navigation

--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
                 <li><a href="#home">Főoldal</a></li>
                 <li><a href="#services">Szolgáltatások</a></li>
                 <li><a href="#about">Rólunk</a></li>
+                <li><a href="palyazatok.html">Pályázatok</a></li>
                 <li><a href="#contact">Kapcsolat</a></li>
             </ul>
         </nav>
