--- a/index.html
+++ b/index.html
@@ -207,14 +207,17 @@
         }
 
         .about-image {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
             border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
             min-height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.2rem;
+        }
+
+        .about-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         /* Why Choose Us */
@@ -478,12 +481,7 @@
                 </ul>
             </div>
             <div class="about-image">
-                <div>
-                    <p style="text-align: center;">
-                        📷<br>
-                        <em>[Ide kerül a cég logó vagy<br>műhely fotó]</em>
-                    </p>
-                </div>
+                <img src="https://lh3.googleusercontent.com/p/AF1QipM_xdVLdQR6vdPmAhzTQZqV-sSKejwc8j_A_c hN" alt="Expert-Tóth Kft műhely" onerror="this.src='https://images.unsplash.com/photo-1611269154421-4e27233ac5c7?w=800'">
             </div>
         </div>
     </section>
