Add workshop image to hero and about section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         /* Hero Section */
         .hero {
             background: linear-gradient(rgba(44, 82, 130, 0.9), rgba(26, 54, 93, 0.9)),
-                        url('https://images.unsplash.com/photo-1611269154421-4e27233ac5c7?w=1920') center/cover;
+                        url('https://lh3.googleusercontent.com/p/AF1QipM_xdVLdQR6vdPmahzTQZqV-ssKejwc8j_A_chN=s780-w780-h624-n-k-no') center/cover;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -210,13 +210,11 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-            min-height: 400px;
         }
 
         .about-image img {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            height: auto;
             display: block;
         }
 
@@ -481,7 +479,7 @@
                 </ul>
             </div>
             <div class="about-image">
-                <img src="https://lh3.googleusercontent.com/p/AF1QipM_xdVLdQR6vdPmAhzTQZqV-sSKejwc8j_A_c hN" alt="Expert-Tóth Kft műhely" onerror="this.src='https://images.unsplash.com/photo-1611269154421-4e27233ac5c7?w=800'">
+                <img src="https://lh3.googleusercontent.com/p/AF1QipM_xdVLdQR6vdPmahzTQZqV-ssKejwc8j_A_chN=s780-w780-h624-n-k-no" alt="Expert-Tóth Kft műhely">
             </div>
         </div>
     </section>
